# asr-research-template

./: .gitignore  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  DATA_MANAGEMENT.md  LICENSE  PROJECT_SETUP.md  README.md  REPRODUCIBILITY.md  RESEARCH_PLAN.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  research-proposal.yml
.github/workflows/: ci.yml
tests/: test_smoke.py
